--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Hi, I'm Tsuiqg",
   "private": true,
+  "type": "module",
   "main": "index.js",
   "bin": "./index.js",
   "files": [
